tests/expected_output/uninitialized-char-array-fsanitize=valgrind/000001-clang-11.1-x86_64-pc-linux-gnu.txt

Runtime error: uninitialized variable accessed.

Execution stopped in main() in tests/run_time_errors/uninitialized-char-array.c at line 7:

int main(int argc, char **argv) { 
	char input[2][10];
-->	printf("%s", input[0]);
}

Values when execution stopped:

argc = 1
input = {<10 uninitialized values>, "\276\276\276\276\276\276 P\003\004"}
input[0] = <10 uninitialized values>
